--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
         let player;
 
         //①video IDを変数 youtubeIdに代入
-        let youtubeId = "1x6xPgg5ijI"; //自分のに買える
+        let youtubeId = "1x6xPgg5ijI"; //自分のに変える
         function onYouTubeIframeAPIReady() {
             //最初のplayerは、変数。後ろのplayerは、<div>のid
             player = new YT.Player("player", {
